[package]
name = "skibidi_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
once_cell = "1.21.3"
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "builder", "model"] }
tokio = { version = "1", features = ["full"] }
